delete blank line

--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 
     <body>
         <div class="main">
-            <div class="gridHolder">
-                
-            </div>
+            <h1> Etch A Sketch! </h1>
+            <div class="gridHolder"></div>
         </div>
 
     </body>
